# nexthink

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: Nexthink C++ Quiz.docx
src/questions/01/: CMakeLists.txt  main.cpp
src/questions/02/: CMakeLists.txt  MyQueue.h  MySmartQueue.h  SyncQueue.h  main.cpp
src/questions/03/: CMakeLists.txt  SyncQueueMvCtor.h  main.cpp
src/questions/06/: CMakeLists.txt  Expressions.h  ExpressionsSharedPtr.h  main.cpp
src/questions/07/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/questions/03/: SyncQueueMvCtorTest.cpp
test/questions/06/: ExpressionTest.cpp
